--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.1.2 <4.0.0"
 
 dependencies:
+  dio: ^5.3.3
   flutter:
     sdk: flutter
   flutter_compass: ^0.8.0
@@ -15,6 +16,7 @@ dependencies:
   google_fonts: ^6.1.0
   permission_handler: ^11.0.1
   sensors_plus: ^3.1.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_lints: ^3.0.1
