--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ dependencies:
   flutter_riverpod: ^2.4.5
   go_router: ^12.1.0
   google_fonts: ^6.1.0
+  local_auth: ^2.1.7
   permission_handler: ^11.0.1
   sensors_plus: ^3.1.0
   share_plus: ^7.2.1
 
 dev_dependencies:
+  change_app_package_name: ^1.1.0
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
