--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
     sdk: flutter
   flutter_compass: ^0.8.0
   flutter_riverpod: ^2.4.5
+  geolocator: ^10.1.0
   go_router: ^12.1.0
   google_fonts: ^6.1.0
+  google_maps_flutter: ^2.5.0
   local_auth: ^2.1.7
   permission_handler: ^11.0.1
   sensors_plus: ^3.1.0
