--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
     <uses-permission android:name="android.permission.BODY_SENSORS" />
 
     <application android:label="miscelanios" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
+        
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-4090802265470824~1276138821"/>
+        
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyDw8j6GIOxustsvrt1HNpGoBCP-ZzsFf5A"/>
         <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
