--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,6 +3,9 @@
 <plist version="1.0">
 <dict>
 
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-4090802265470824~7675941938</string>
+
 	<key>NSFaceIDUsageDescription</key>
 	<string>Why is my app authenticating using face id?</string>
 
