--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   go_router: ^12.1.0
   google_fonts: ^6.1.0
   google_maps_flutter: ^2.5.0
+  google_mobile_ads: ^3.1.0
   local_auth: ^2.1.7
   permission_handler: ^11.0.1
   quick_actions: ^1.0.6
   sensors_plus: ^3.1.0
   share_plus: ^7.2.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
